# moire

./: .gitignore  AGENTS.md  CLAUDE.md  COORDINATE.md  Cargo.toml  Justfile  MANIFESTO.md  MIGRATION.md  PEEPS_TYPE_MIGRATION.md  README.md  package.json  pnpm-lock.yaml
crates/moire/: CHANGELOG.md  Cargo.toml
crates/moire-examples/: Cargo.toml
crates/moire-examples/src/: main.rs
crates/moire-examples/src/scenarios/: channel_full_stall.rs  instrument_macro_smoke.rs  mod.rs  mutex_lock_order_inversion.rs  oneshot_sender_lost_in_map.rs  roam_rpc_stuck_request.rs  roam_rust_swift_stuck_request.rs  semaphore_starvation.rs
crates/moire-macros/: CHANGELOG.md  Cargo.toml
crates/moire-macros-noop/: CHANGELOG.md  Cargo.toml
crates/moire-macros/src/: instrument.rs  lib.rs
crates/moire-source-context/: CHANGELOG.md  Cargo.toml  rustfmt.toml
crates/moire-source-context/src/: lib.rs  tests.rs
crates/moire-source-context/src/snapshots/: moire_source_context__tests__async_fn_multiline_params.compact.snap  moire_source_context__tests__async_fn_multiline_params.normal.snap  moire_source_context__tests__channel_creation.compact.snap  moire_source_context__tests__channel_creation.normal.snap  moire_source_context__tests__closing_brace_closure.compact.snap  moire_source_context__tests__closing_brace_closure.normal.snap  moire_source_context__tests__closing_brace_empty_fn.compact.snap  moire_source_context__tests__closing_brace_empty_fn.normal.snap  moire_source_context__tests__closing_brace_method_in_impl.compact.snap  moire_source_context__tests__closing_brace_method_in_impl.normal.snap  moire_source_context__tests__closing_brace_multi_stmt_fn.compact.snap  moire_source_context__tests__closing_brace_multi_stmt_fn.normal.snap  moire_source_context__tests__closing_brace_single_stmt_fn.compact.snap  moire_source_context__tests__closing_brace_single_stmt_fn.normal.snap  moire_source_context__tests__closure_inside_function.compact.snap  moire_source_context__tests__closure_inside_function.normal.snap  moire_source_context__tests__compact_keeps_target_statement_neighbors.compact.snap  moire_source_context__tests__compact_keeps_target_statement_neighbors.normal.snap  moire_source_context__tests__compact_redacts_async_move_body.compact.snap  moire_source_context__tests__compact_redacts_async_move_body.normal.snap  moire_source_context__tests__enclosing_fn_free_function.compact.snap  moire_source_context__tests__enclosing_fn_free_function.normal.snap  moire_source_context__tests__enclosing_fn_generic_impl.compact.snap  moire_source_context__tests__enclosing_fn_generic_impl.normal.snap  moire_source_context__tests__enclosing_fn_impl_method.compact.snap  moire_source_context__tests__enclosing_fn_impl_method.normal.snap  moire_source_context__tests__enclosing_fn_inside_closure.compact.snap  moire_source_context__tests__enclosing_fn_inside_closure.normal.snap  moire_source_context__tests__enclosing_fn_many_params.compact.snap  moire_source_context__tests__enclosing_fn_many_params.normal.snap  moire_source_context__tests__enclosing_fn_module_and_return_type.compact.snap  moire_source_context__tests__enclosing_fn_module_and_return_type.normal.snap  moire_source_context__tests__enclosing_fn_self_mut_ref.compact.snap  moire_source_context__tests__enclosing_fn_self_mut_ref.normal.snap  moire_source_context__tests__enclosing_fn_strips_pub_crate.compact.snap  moire_source_context__tests__enclosing_fn_strips_pub_crate.normal.snap  moire_source_context__tests__enclosing_fn_three_params.compact.snap  moire_source_context__tests__enclosing_fn_three_params.normal.snap  moire_source_context__tests__extract_match_expression.compact.snap  moire_source_context__tests__extract_match_expression.normal.snap  (+33 more)
crates/moire-source-context/src/tests/: async_fn_multiline_params.rs  channel_creation.rs  closing_brace_closure.rs  closing_brace_method_in_impl.rs  closing_brace_single_stmt_fn.rs  closure_inside_function.rs  compact_keeps_target_statement_neighbors.rs  compact_redacts_async_move_body.rs  enclosing_fn_free_function.rs  enclosing_fn_generic_impl.rs  enclosing_fn_impl_method.rs  enclosing_fn_inside_closure.rs  enclosing_fn_many_params.rs  enclosing_fn_module_and_return_type.rs  enclosing_fn_non_rust.js  enclosing_fn_self_mut_ref.rs  enclosing_fn_strips_pub_crate.rs  enclosing_fn_three_params.rs  extract_match_expression.rs  extract_multi_line_await.rs  extract_simple_statement.rs  few_statements_no_cuts.rs  fn_decl_target.rs  function_with_many_statements.rs  impl_block_with_methods.rs  long_match_elides_body.rs  named_in_spawn.rs  omits_fn_signature.rs  single_stmt_closure_walks_up.rs  statement_dedents_continuation.rs  (+5 more)
crates/moire-sqlite-facet/: CHANGELOG.md  Cargo.toml
crates/moire-sqlite-facet/src/: lib.rs
crates/moire-tokio/: CHANGELOG.md  Cargo.toml
crates/moire-tokio/src/: disabled.rs  lib.rs
crates/moire-trace-capture/: CHANGELOG.md  Cargo.toml
crates/moire-trace-capture/src/: lib.rs
crates/moire-trace-types/: CHANGELOG.md  Cargo.toml
crates/moire-trace-types/src/: lib.rs
crates/moire-types/: CHANGELOG.md  Cargo.toml
crates/moire-types/src/: api.rs  diff.rs  lib.rs  primitives.rs  recording.rs  sources.rs
crates/moire-wasm/: CHANGELOG.md  Cargo.toml
crates/moire-wasm/src/: lib.rs
crates/moire-wire/: CHANGELOG.md  Cargo.toml
crates/moire-wire/src/: lib.rs
crates/moire/src/: lib.rs
crates/peeps/: Cargo.toml
crates/peeps-dump/: Cargo.toml
crates/peeps-dump/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/peeps-dump/src/: http.rs  main.rs  server.rs
crates/peeps-examples/: Cargo.toml
crates/peeps-examples/src/: main.rs
crates/peeps-locks/: Cargo.toml
crates/peeps-locks/src/: lib.rs  snapshot.rs
crates/peeps/src/: collect.rs  dashboard_client.rs  debug_dashboard.html  disabled.rs  enabled.rs  fs.rs  joinset.rs  lib.rs  net.rs
examples/channel-full-stall/: Cargo.toml
examples/channel-full-stall/src/: main.rs
examples/roam-rpc-stuck-request/: Cargo.toml
examples/roam-rpc-stuck-request/src/: main.rs
(+574 files in other folders)
