[workspace]
resolver = "2"
members = [
  "crates/xtask",
  "crates/moire",
  "crates/moire-macros",
  "crates/moire-macros-noop",
  "crates/moire-tokio",
  "crates/moire-wasm",
  "crates/moire-runtime",
  "crates/moire-web",
  "crates/moire-source-context",
  "crates/moire-types",
  "crates/moire-trace-types",
  "crates/moire-trace-capture",
  "crates/moire-wire",
  "crates/moire-sqlite-facet",
  "crates/rusqlite-facet",
  "crates/moire-examples",
  "crates/facet-typescript-repro",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/moire"

[workspace.dependencies]
# Internal
moire = { path = "crates/moire", version = "1.0.0" }
moire-macros = { path = "crates/moire-macros", version = "1.0.0" }
moire-macros-noop = { path = "crates/moire-macros-noop", version = "1.0.0" }
moire-tokio = { path = "crates/moire-tokio", version = "1.0.0" }
moire-wasm = { path = "crates/moire-wasm", version = "1.0.0" }
moire-runtime = { path = "crates/moire-runtime", version = "1.0.0" }
moire-types = { path = "crates/moire-types", version = "1.0.0" }
moire-source-context = { path = "crates/moire-source-context", version = "1.0.0" }
moire-trace-types = { path = "crates/moire-trace-types", version = "1.0.0" }
moire-trace-capture = { path = "crates/moire-trace-capture", version = "1.0.0" }
moire-wire = { path = "crates/moire-wire", version = "1.0.0" }
moire-sqlite-facet = { path = "crates/moire-sqlite-facet", version = "1.0.0" }
rusqlite-facet = { path = "crates/rusqlite-facet", version = "1.0.0" }

# facet
facet = { version = "0.45" }
facet-core = { version = "0.45" }
facet-reflect = { version = "0.44.0" }
facet-value = { version = "0.44.0" }
facet-json = { version = "0.44.0" }
facet-typescript = { version = "0.44.0" }

ur-taking-me-with-you = { version = "7.0.0-alpha.1", features = ["tokio"] }
ctor = "0.2" # External
figue = { version = "2" }
libc = "0.2"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.49", features = ["full"] }
proc-macro2 = "1"
quote = "1"
unsynn = "0.3"
axum = { version = "0.8", features = ["ws"] }
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
ureq = "2.12"
addr2line = "0.24"
arborium = { version = "2", features = [
  "lang-rust",
  "lang-c",
  "lang-cpp",
  "lang-go",
  "lang-zig",
  "lang-javascript",
  "lang-typescript",
  "lang-tsx",
  "lang-python",
  "lang-ruby",
  "lang-java",
  "lang-kotlin",
  "lang-scala",
  "lang-bash",
  "lang-json",
  "lang-yaml",
  "lang-toml",
  "lang-xml",
  "lang-html",
  "lang-css",
  "lang-scss",
  "lang-markdown",
  "lang-sql",
  "lang-swift",
  "lang-elixir",
  "lang-haskell",
  "lang-ocaml",
  "lang-lua",
  "lang-php",
  "lang-r",
] }

[patch."https://github.com/bearcove/moire"]
moire = { path = "crates/moire" }
moire-types = { path = "crates/moire-types" }
