[package]
name = "moire-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
diagnostics = []

[dependencies]
facet.workspace = true
figue.workspace = true
libc.workspace = true
moire = { workspace = true, features = ["diagnostics"] }
tokio.workspace = true
ureq.workspace = true
ur-taking-me-with-you.workspace = true
