[package]
name = "moire-macros-noop"
description = "No-op `#[moire::instrument]` proc-macro stub used when moire diagnostics are disabled"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
proc-macro = true
