[package]
name = "moire-source-context"
description = "Tree-sitter-based source context extraction and scope cutting for moire's dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
arborium.workspace = true
moire-types.workspace = true

[dev-dependencies]
insta = "1"
datatest-mini = "0.2.0"
