[package]
name = "moire-trace-capture"
description = "Frame-pointer backtrace capture for moire runtime instrumentation"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
libc.workspace = true
moire-trace-types.workspace = true
