[package]
name = "moire-types"
description = "Core graph types for moire: entities, events, edges, scopes, and snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
rusqlite = ["dep:rusqlite", "dep:facet-json", "moire-trace-types/rusqlite"]

[dependencies]
facet.workspace = true
facet-json = { workspace = true, optional = true }
facet-value.workspace = true
moire-trace-types.workspace = true
rusqlite = { workspace = true, optional = true }
