[package]
name = "moire-wasm"
description = "WASM runtime surface for moire (instrumentation is no-op on wasm32)"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
diagnostics = []

[dependencies]
async-channel = "2"
async-lock = "3"
event-listener = "5"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
gloo-timers = { version = "0.3", features = ["futures"] }
moire-types = { path = "../moire-types" }
wasm-bindgen-futures = "0.4"
