[package]
name = "moire-wire"
description = "Wire protocol types and frame codec for moire's runtime-to-dashboard streaming"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
facet-json.workspace = true
moire-trace-types.workspace = true
moire-types.workspace = true
