[package]
name = "moire"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
diagnostics = [
  "dep:moire-macros",
  "moire-tokio/diagnostics",
  "moire-wasm/diagnostics",
]

[dependencies]
moire-macros-noop.workspace = true
moire-macros = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
moire-tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
moire-wasm.workspace = true
