[package]
name = "peeps-dump"
version.workspace = true
edition.workspace = true
license.workspace = true

# This will be the CLI tool / dashboard server
[[bin]]
name = "peeps"
path = "src/main.rs"

[dependencies]
axum.workspace = true
base64 = "0.22"
facet-json.workspace = true
flate2 = "1"
mime_guess.workspace = true
peeps.workspace = true
peeps-types.workspace = true
peeps-waitgraph.workspace = true
rust-embed.workspace = true
tokio.workspace = true
