[package]
name = "peeps-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
compact_str.workspace = true
facet.workspace = true
figue.workspace = true
libc.workspace = true
peeps = { workspace = true, features = ["diagnostics"] }
tokio.workspace = true
ureq.workspace = true
roam = { path = "../../../roam/rust/roam" }
roam-stream = { path = "../../../roam/rust/roam-stream", features = ["diagnostics"] }
