[package]
name = "peeps"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
facet.workspace = true
facet-json.workspace = true
peeps-tasks.workspace = true
peeps-threads.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
