[package]
name = "peeps"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
locks = ["dep:peeps-locks"]
diagnostics = [
  "peeps-futures/diagnostics",
  "peeps-locks?/diagnostics",
  "peeps-sync/diagnostics",
]
dashboard = []

[dependencies]
facet.workspace = true
facet-json.workspace = true
peeps-locks = { workspace = true, optional = true }
peeps-sync.workspace = true
peeps-futures.workspace = true
peeps-types.workspace = true
tokio.workspace = true
tracing.workspace = true
