[package]
name = "peeps"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
diagnostics = [
  "peeps-futures/diagnostics",
  "peeps-sync/diagnostics",
]
dashboard = []

[dependencies]
facet.workspace = true
facet-json.workspace = true
parking_lot.workspace = true
peeps-sync.workspace = true
peeps-futures.workspace = true
peeps-types.workspace = true
tokio.workspace = true
tracing.workspace = true
