[package]
name = "channel-full-stall"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
peeps-legacy = { path = "../../crates/peeps-legacy", features = ["diagnostics", "dashboard"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "time"] }
