[package]
name = "roam-rpc-stuck-request"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
peeps-legacy = { path = "../../crates/peeps-legacy", features = ["diagnostics", "dashboard"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
roam = { path = "../../../roam/rust/roam" }
roam-session = { path = "../../../roam/rust/roam-session", features = ["diagnostics"] }
roam-wire = { path = "../../../roam/rust/roam-wire" }

[patch."https://github.com/bearcove/peeps"]
peeps-legacy = { path = "../../crates/peeps-legacy" }
peeps-types-legacy = { path = "../../crates/peeps-types-legacy" }
