[package]
name = "roam-rpc-stuck-request"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
peeps = { path = "../../crates/peeps", features = ["diagnostics"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "net"] }
roam = { path = "../../../roam/rust/roam" }
roam-stream = { path = "../../../roam/rust/roam-stream", features = ["diagnostics"] }

[patch."https://github.com/bearcove/peeps"]
peeps = { path = "../../crates/peeps" }
peeps-types = { path = "../../crates/peeps-types" }
